@@ -139,7 +139,7 @@
 
  
   <para>
-TODO: Rewrote this:
+TODO: Rewrite this:
    Some applets have been removed in GNOME &version; because they have either been
    replaced by something better, or were unmainted and insecure. The three
    applets to be removed are, the CD Player applet, the standalone wireless
