@@ -1,3 +1,8 @@
+2005-02-17  Murray Cumming  <murrayc@murrayc.com>
+
+	* rndesktop.xml, rnapplets.xml: Tidied up the new text, to make it 
+	shorter, and to remove obscure techy stuff.
+
 2005-02-15  Davyd Madeley  <davyd@madeley.id.au>
 
 	* release-notes.xml:
